# Rust_python_comparison

./: README.md
alternative_implementaion/: README.md
alternative_implementaion/python_downloader/: requirements.txt
alternative_implementaion/python_downloader/src/: __init__.py  __main__.py  downloader.py
alternative_implementaion/rust_downloader/: Cargo.toml
alternative_implementaion/rust_downloader/src/: lib.rs  main.rs
concurrent_scraper_py/: main.py  setup.py
concurrent_scraper_py/concurrent_scraper_py.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
concurrent_scraper_py/scraper/: fetcher.py  processor.py
concurrent_scraper_py/utils/: metrics.py
concurrent_scraper_rs/: Cargo.toml
concurrent_scraper_rs/src/: main.rs
concurrent_scraper_rs/src/scraper/: fetcher.rs  mod.rs  processor.rs
concurrent_scraper_rs/src/utils/: metrics.rs
